<resources>

    <string name="app_name">Groupathon</string>
    <string-array name="titles">
        <item>Group 1</item>
        <item>Group 2</item>
        <item>Group 3</item>
        <item>Group 4</item>
        <item>Group 5</item>
        <item>Group 6</item>
        <item>Group 7</item>
    </string-array>
    <string-array name="description">
        <item>Desc 1</item>
        <item>Desc 2</item>
        <item>Desc 3</item>
        <item>Desc 4</item>
        <item>Desc 5</item>
        <item>Desc 6</item>
        <item>Desc 7</item>
    </string-array>
    <string-array name="members">
        <item>Member 1</item>
        <item>Member 2</item>
        <item>Member 3</item>
        <item>Member 4</item>
        <item>Member 5</item>
        <item>Member 6</item>
        <item>Member 7</item>
        <item>Member 8</item>
        <item>Member 9</item>
        <item>Member 10</item>
        <item>Member 11</item>
        <item>Member 12</item>
    </string-array>
    <string-array name="items">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
        <item>Item 6</item>
        <item>Item 7</item>
        <item>Item 8</item>
        <item>Item 9</item>
        <item>Item 10</item>
        <item>Item 11</item>
        <item>Item 12</item>
    </string-array>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. LogMe In!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
</resources>
